[gd_scene load_steps=7 format=2]

[ext_resource path="res://UI/Results.gd" type="Script" id=1]
[ext_resource path="res://Menu UI Assets/newresultadjust.png" type="Texture" id=2]
[ext_resource path="res://Assets/Fonts/8-BIT WONDER.TTF" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 3 )

[sub_resource type="Animation" id=3]
resource_name = "blinking"
tracks/0/type = "value"
tracks/0/path = NodePath(".:custom_colors/font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Results" type="Node"]
script = ExtResource( 1 )

[node name="newresultadjust" type="Sprite" parent="."]
position = Vector2( 761.682, 435.639 )
scale = Vector2( 1.02152, 1 )
texture = ExtResource( 2 )
normal_map = ExtResource( 2 )

[node name="coinsLabel" type="Label" parent="."]
margin_left = 820.0
margin_top = 117.0
margin_right = 1020.0
margin_bottom = 207.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.854902, 0.831373, 0.831373, 1 )
text = "0"
valign = 1

[node name="rubberLabel" type="Label" parent="."]
margin_left = 846.299
margin_top = 208.701
margin_right = 1096.3
margin_bottom = 300.701
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.854902, 0.831373, 0.831373, 1 )
text = "0"
valign = 1

[node name="metalLabel" type="Label" parent="."]
margin_left = 819.676
margin_top = 301.557
margin_right = 1019.68
margin_bottom = 393.557
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.854902, 0.831373, 0.831373, 1 )
text = "0"
valign = 1

[node name="plasticLabel" type="Label" parent="."]
margin_left = 850.844
margin_top = 391.166
margin_right = 1050.84
margin_bottom = 483.166
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.854902, 0.831373, 0.831373, 1 )
text = "0"
valign = 1

[node name="tryAgain" type="Label" parent="."]
margin_left = 778.757
margin_top = 829.142
margin_right = 1638.76
margin_bottom = 879.142
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Press start to try again"
align = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="tryAgain"]
anims/blinking = SubResource( 3 )
